[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/EditorsElements/DialogEditor/GraphUiBlocks/MoodBlock.gd" type="Script" id=1]
[ext_resource path="res://UI/EditorsElements/DialogEditor/MoodShower.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/HideButton.gd" type="Script" id=3]

[node name="MoodBlock" type="VBoxContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 157.0
margin_bottom = 208.0
rect_min_size = Vector2( 150, 0 )
script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_right = 150.0
margin_bottom = 72.0
columns = 2

[node name="Label" type="Label" parent="GridContainer"]
margin_right = 70.0
margin_bottom = 15.0
text = "Person:"
uppercase = true

[node name="PersonName" type="Label" parent="GridContainer"]
margin_left = 74.0
margin_right = 150.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "SOME_PERSON"
align = 2
clip_text = true

[node name="Label5" type="Label" parent="GridContainer"]
margin_top = 19.0
margin_right = 70.0
margin_bottom = 34.0
text = "Mood:"
uppercase = true

[node name="MoodName" type="Label" parent="GridContainer"]
margin_left = 74.0
margin_top = 19.0
margin_right = 150.0
margin_bottom = 34.0
size_flags_horizontal = 3
text = "SOME_MOOD_NAME"
align = 2
clip_text = true

[node name="Label3" type="Label" parent="GridContainer"]
margin_top = 38.0
margin_right = 70.0
margin_bottom = 53.0
text = "Mood Group:"
uppercase = true

[node name="MoodGroup" type="Label" parent="GridContainer"]
margin_left = 74.0
margin_top = 38.0
margin_right = 150.0
margin_bottom = 53.0
size_flags_horizontal = 3
text = "SOME_MOOD_GROUP"
align = 2
clip_text = true

[node name="Label6" type="Label" parent="GridContainer"]
margin_top = 57.0
margin_right = 70.0
margin_bottom = 72.0
text = "Align:"
uppercase = true

[node name="Align" type="Label" parent="GridContainer"]
margin_left = 74.0
margin_top = 57.0
margin_right = 150.0
margin_bottom = 72.0
size_flags_horizontal = 3
text = "ALIGN_NAME"
align = 2
clip_text = true

[node name="HideButton" type="Button" parent="."]
margin_top = 76.0
margin_right = 150.0
margin_bottom = 97.0
script = ExtResource( 3 )
is_hide = true
hide_node = NodePath("../MoodShower")
on_hide_text = "Show preview"
on_show_text = "Hide preview"

[node name="MoodShower" parent="." instance=ExtResource( 2 )]
margin_top = 101.0
margin_right = 150.0
margin_bottom = 201.0
